# Lx_cameraS10

./: .gitignore  Lx_cameraS10.sln  README.md
Lx-360/: CMakeLists.txt  CMakeUserPresets.json  Lx360.cpp  Lx360.h  Lx360.qrc  Lx360.ui  livox_lidar_api.h  livox_lidar_def.h  main.cpp
Lx_cameraS10/: CMakeLists.txt  Lx_cameraS10.cpp  Lx_cameraS10.h  Lx_cameraS10.qrc  Lx_cameraS10.ui  Lx_cameraS10.vcxproj  Lx_cameraS10.vcxproj.filters  lx_camera_api.h  lx_camera_define.h  main.cpp
Lx_cameraS10/x64/Debug/: Lx_cameraS10.exe.recipe  Lx_cameraS10.ilk  vc143.idb
Lx_cameraS10/x64/Debug/Lx_cameraS10.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lx_cameraS10.lastbuildstate  Lx_cameraS10.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
Lx_cameraS10/x64/Debug/moc/: moc_Lx_cameraS10.cpp
Lx_cameraS10/x64/Debug/qt/qmake/: props.txt  qtvars.pro  qtvars.vcxproj  qtvars.xml
Lx_cameraS10/x64/Debug/qt/rcc/: qrc_Lx_cameraS10.cpp
Lx_cameraS10/x64/Debug/uic/: ui_Lx_cameraS10.h
Lx_cameraS10/x64/Release/: Lx_cameraS10.exe.recipe  Lx_cameraS10.iobj  Lx_cameraS10.ipdb
Lx_cameraS10/x64/Release/Lx_cameraS10.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lx_cameraS10.lastbuildstate  Lx_cameraS10.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
Lx_cameraS10/x64/Release/moc/: moc_Lx_cameraS10.cpp
Lx_cameraS10/x64/Release/qt/moc/: moc_Lx_cameraS10.cpp
Lx_cameraS10/x64/Release/qt/qmake/: .qmake.stash  qtvars.pro  qtvars.vcxproj  qtvars.xml
Lx_cameraS10/x64/Release/qt/uic/: ui_Lx_cameraS10.h
Lx_cameraS10/x64/Release/uic/: ui_Lx_cameraS10.h
Lx_s10_time/: CMakeLists.txt  Lx_s10_time.cpp  Lx_s10_time.h  Lx_s10_time.qrc  Lx_s10_time.ui  main.cpp
SDK/include/: lx_camera_define.h
script/: LDcCloseDevice.lua  LDcGetApiVersion.lua  LDcGetBoolValue.lua  LDcGetDeviceList.lua  LDcGetErrorString.lua  LDcGetFloatValue.lua  LDcGetGpuEnable.lua  LDcGetIntValue.lua  LDcGetPtrValueAndShow.lua  LDcGetPtrrAndSave.lua  LDcGetStringValue.lua  LDcLog.lua  LDcOpenDevice.lua  LDcReadUserData.lua  LDcSaveXYZ.lua  LDcSetBoolValue.lua  LDcSetCameraIp.lua  LDcSetCmd.lua  LDcSetFloatValue.lua  LDcSetGpuEnable.lua  LDcSetInfoOutput.lua  LDcSetIntValue.lua  LDcSetParamPath.lua  LDcSetROI.lua  LDcSetStringValue.lua  LDcSpecialControl.lua  LDcStartStream.lua  LDcStopStream.lua  LDcUnregisterCameraStatusCallback.lua  LDcUnregisterFrameCallback.lua  LDcWriteUserData.lua
